--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -42,7 +42,7 @@
         display: flex;
         padding: 5px 10px 1px 10px;
         border-radius: 5px 5px 0 0;
-        line-height: 24px;
+        line-height: 1.1em;
         box-sizing: border-box;
         text-align: center;
         height: 100%;
