Fix mobile menu items sometimes displaying inline

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -916,6 +916,9 @@ legend.collapse-processed a:visited {
   }
 }
 
+#block-superfish-1 {
+  display: flex;
+}
 #block-superfish-1 .block__content {
   width: 100%;
 }
@@ -1126,7 +1129,7 @@ ul.sf-vertical li ul li ul {
   border-top: 0px;
   border-radius: 0 0 10px 10px;
   box-sizing: border-box;
-  display: block;
+  display: block !important;
   width: 100%;
   margin-bottom: 1em;
 }
