--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -1,4 +1,6 @@
 #block-superfish-1 {
+    display: flex;
+
     .block__content {
         width: 100%;
     }
@@ -208,7 +210,7 @@ ul.sf-vertical li ul li ul {
     border-top: 0px;
     border-radius: 0 0 10px 10px;
     box-sizing: border-box;
-    display: block;
+    display: block !important;
     width: 100%;
     margin-bottom: 1em;
 
