--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -78,7 +78,10 @@ h6 {
 p {
   font-size: 13px;
   @include fluid-type(400px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
-
+  
+  &:not([class]) {
+    text-align: justify;
+  }
 }
 
 /* Default link styles - separate a:visited for a different visited
