--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -145,6 +145,9 @@ p {
     font-size: 18px;
   }
 }
+p:not([class]) {
+  text-align: justify;
+}
 
 /* Default link styles - separate a:visited for a different visited
 link style */
