Fix view card cycles pager positioning in mobile

--- a/sass/pages/view_card_cycles.scss
+++ b/sass/pages/view_card_cycles.scss
@@ -2,6 +2,8 @@
 @import "../abstractions/_mixins.scss";
 
 .view-card-cycles {
+  position: relative;
+  
   .vscc-controls {
     text-align: center;
   }
