--- a/css/view_card_cycles.css
+++ b/css/view_card_cycles.css
@@ -1,4 +1,8 @@
 /* Fluid Typography */
+.view-card-cycles {
+  position: relative;
+}
+
 .view-card-cycles .vscc-controls {
   text-align: center;
 }
@@ -91,29 +95,17 @@
 }
 
 .pane-card-cycles-card-blog .view-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .pane-card-cycles-card-blog .view-content .views-slideshow-cycle-main-frame-row {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .pane-card-cycles-card-blog .view-content .views-row {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 30%;
-          flex: 1 30%;
+  flex: 1 30%;
   margin: 0.5em;
   padding: 0;
   text-align: center;
@@ -122,9 +114,7 @@
 @media (min-width: 375px) {
   .pane-card-cycles-card-blog .view-content .views-row {
     min-width: 300px;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 300px;
-            flex: 1 1 300px;
+    flex: 1 1 300px;
   }
 }
 
