Center submit button

--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -566,15 +566,11 @@ form input.form-submit:focus {
   /* old browsers */
   background-image: linear-gradient(top, #f4f8fb 0%, #fafcfb 100%);
   /* w3c */
-  /* opera */
-  /* webkit */
-  background-image: -moz-linear-gradient(top, #f4f8fb 0%, #fafcfb 100%);
-  /* firefox */
   border: 1px solid #9babb0;
   color: #666;
   padding: 2px;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  max-width: 100%;
 }
 
 /* all IEs */
@@ -620,6 +616,10 @@ legend.collapse-processed,
 legend.collapse-processed a:link,
 legend.collapse-processed a:visited {
   font-weight: bold;
+}
+
+.form-actions {
+  text-align: center;
 }
 
 /* @end forms*/
