Blog page fixes

--- a/css/blog_pages.css
+++ b/css/blog_pages.css
@@ -24,19 +24,12 @@
 }
 
 .blog-type-page #main-content .panel-myriad-layout {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 .blog-type-page #main-content .panel-myriad-layout > div {
-  -webkit-box-flex: 100%;
-      -ms-flex: 100%;
-          flex: 100%;
+  flex: 100%;
 }
 
 .blog-type-page #main-content .panel-myriad-layout .views-exposed-widgets .views-reset-button {
@@ -61,13 +54,8 @@
 
 .blog-type-page #main-content .panel-myriad-layout .row-one {
   width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
 }
 
 @media (min-width: 944px) {
@@ -78,26 +66,20 @@
 
 .blog-type-page #main-content .panel-myriad-layout .main-content {
   width: 100%;
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
+  flex: 1 100%;
   padding: 0.5em 0;
 }
 
 @media (min-width: 626px) {
   .blog-type-page #main-content .panel-myriad-layout .main-content {
     min-width: 560px;
-    -webkit-box-flex: 3;
-        -ms-flex: 3 0 560px;
-            flex: 3 0 560px;
+    flex: 3 0 560px;
     padding: 0.5em 0;
   }
 }
 
 .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 0px;
-          flex: 1 1 0;
+  flex: 1 1 0;
   margin: 0.76%;
   min-width: 0;
   max-width: 100%;
@@ -110,18 +92,14 @@
 @media (min-width: 375px) {
   .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
     min-width: 300px;
-    -webkit-box-flex: 100%;
-        -ms-flex: 100%;
-            flex: 100%;
+    flex: 100%;
   }
 }
 
 @media (min-width: 944px) {
   .blog-type-page #main-content .panel-myriad-layout .sidebar-content {
     min-width: 0;
-    -webkit-box-flex: 300px;
-        -ms-flex: 300px;
-            flex: 300px;
+    flex: 300px;
   }
 }
 
@@ -184,8 +162,7 @@
 .blog-type-page #main-content .panel-myriad-layout .pane-news2-panel-pane-6,
 .blog-type-page #main-content .panel-myriad-layout .pane-press-releases2-panel-pane-6,
 .blog-type-page #main-content .panel-myriad-layout .pane-panopoly-faq-panel-pane-4 {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0 0 1em 0;
   height: 100%;
 }
@@ -201,14 +178,9 @@
 
 .blog-type-page #main-content .panel-myriad-layout .featured-display .view-content,
 .blog-type-page #main-content .panel-myriad-layout .main-display .view-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 100%;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   height: 100%;
 }
 
@@ -256,6 +228,7 @@
 .blog-type-page #main-content .panel-myriad-layout .featured-display .views-field-body .field-content,
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-field-body .field-content {
   width: 100%;
+  margin: 0 0.5em;
 }
 
 .blog-type-page #main-content .panel-myriad-layout .featured-display .views-field-body img,
@@ -269,33 +242,23 @@
 .blog-type-page #main-content .panel-myriad-layout .featured-display .views-row,
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-row {
   width: calc((100% / 3) - 42px);
-  -webkit-box-flex: 1;
-      -ms-flex: 1 100%;
-          flex: 1 100%;
+  flex: 1 100%;
   padding: 0.5em;
   margin: 0.76%;
   border: 1px solid #cccccc;
   font-size: 14px;
-  display: -webkit-inline-box;
-  display: -ms-inline-flexbox;
   display: inline-flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+  flex-flow: column nowrap;
   vertical-align: top;
   border-radius: 5px;
-  -webkit-box-sizing: content-box;
-          box-sizing: content-box;
+  box-sizing: content-box;
   background-color: white;
 }
 
 @media (min-width: 420px) {
   .blog-type-page #main-content .panel-myriad-layout .featured-display .views-row,
   .blog-type-page #main-content .panel-myriad-layout .main-display .views-row {
-    -webkit-box-flex: 1;
-        -ms-flex: 1 1 250px;
-            flex: 1 1 250px;
+    flex: 1 1 250px;
     font-size: 18px;
     min-width: 250px;
   }
@@ -374,11 +337,7 @@
 
 .blog-type-page #main-content .panel-myriad-layout .featured-display .views-row .views-field-body,
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-row .views-field-body {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  flex: 1;
   display: flex;
 }
 
@@ -399,13 +358,8 @@
 }
 
 .blog-type-page #main-content .panel-myriad-layout .featured-display {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
+  flex-flow: row wrap;
   width: 100%;
 }
 
@@ -447,42 +401,26 @@
 
 .blog-type-page #main-content .panel-myriad-layout .main-display,
 .blog-type-page #main-content .panel-myriad-layout .main-display .view-content {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: row wrap;
-          flex-flow: row wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  flex-flow: row wrap;
+  justify-content: center;
 }
 
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-row,
 .blog-type-page #main-content .panel-myriad-layout .main-display .view-content .views-row {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 30%;
-          flex: 1 30%;
+  flex: 1 30%;
   margin: 0.5em;
   background-color: white;
   font-size: 14px;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-flow: column nowrap;
-          flex-flow: column nowrap;
+  flex-flow: column nowrap;
 }
 
 @media (min-width: 375px) {
   .blog-type-page #main-content .panel-myriad-layout .main-display .views-row,
   .blog-type-page #main-content .panel-myriad-layout .main-display .view-content .views-row {
     min-width: 250px;
-    -webkit-box-flex: 1;
-        -ms-flex: 1 250px;
-            flex: 1 250px;
+    flex: 1 250px;
     font-size: 18px;
   }
 }
@@ -579,9 +517,7 @@
 
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-field-body,
 .blog-type-page #main-content .panel-myriad-layout .main-display .view-content .views-field-body {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  flex-grow: 1;
 }
 
 .blog-type-page #main-content .panel-myriad-layout .main-display .views-field-body .field-content,
@@ -681,7 +617,7 @@
 }
 
 p:last-child {
-  margin: 0;
+  margin-bottom: 0;
 }
 
 .pane-views-empty {
