--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -81,8 +81,13 @@
             top: 4px;
 
             li a {
+                color: #FFF;
                 background: #98d022;
                 padding: 5px 10px 1px 10px;
+
+                &:hover {
+                    color: #154b70;
+                }
             }
         }
     }
