--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -6,11 +6,21 @@ html {
 
 body {
   font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   margin: 0;
   display: flex;
   flex-flow: column nowrap;
   min-height: 100vh;
+}
+@media screen and (min-width: 400px) {
+  body {
+    font-size: calc(14px + 2 * ((100vw - 400px) / 800));
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    font-size: 16px;
+  }
 }
 
 h1 {
