--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -256,7 +256,7 @@ ul.sf-vertical li ul li ul {
         }
 
         &.menuparent>ul {
-            padding-left: 10px;
+            padding-left: 10vw;
             box-sizing: border-box;
         }
 
