--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -17,20 +17,20 @@ h1 {
   clear: left;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-size: 183.3%; /* 22px/12px */
-  font-weight: normal;
   line-height: 120%;
-  margin-bottom: 5px;
-  margin-top: 0;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 h2 {
   border-bottom: 1px solid #d6dd89;
   font-family: "Myriad Pro", "Myriad Web Pro Regular", "Lucida Grande", Geneva, Trebuchet MS, sans-serif;
   font-size: 133.3%; /* 16px/12px */
-  font-weight: 600;
+  font-weight: 700;
+  line-height: 120%;
   text-transform: uppercase;
-  margin-bottom: 5px;
-  margin-top: 0;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 h2 a:hover,
@@ -52,27 +52,39 @@ h2 {
   text-transform: none;
   border-bottom: none;
   font-size: 22px;
-  @include fluid-type(400px, 1200px, 20px, 26px); // values inside are ($min_width,$max_width, $min_font, $max_font);
+  @include fluid-type(400px, 1200px, 22px, 28px); // values inside are ($min_width,$max_width, $min_font, $max_font);
 }
 
 h3 {
-  font-size: 14px;
-  @include fluid-type(400px, 1200px, 14px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  font-size: 16px;
+  @include fluid-type(400px, 1200px, 16px, 22px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  line-height: 120%;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 h4 {
   font-size: 13px;
   @include fluid-type(400px, 1200px, 13px, 18px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  line-height: 120%;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 h5 {
   font-size: 10px;
   @include fluid-type(400px, 1200px, 10px, 14px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  line-height: 120%;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 h6 {
   font-size: 9px;
   @include fluid-type(400px, 1200px, 9px, 12px); // values inside are ($min_width, $max_width, $min_font, $max_font);
+  line-height: 120%;
+  margin-bottom: 0.5em;
+  margin-top: 0.5em;
 }
 
 p {
