--- a/sass/pages/testimonial-nodes.scss
+++ b/sass/pages/testimonial-nodes.scss
@@ -22,7 +22,7 @@
 		}
 	}
 
-	.pane-node-title {
+	.pane-node-title-field {
 		text-align: center;
 	}
 
@@ -51,7 +51,7 @@
 			width: calc(75% - 2em);
 		}
 
-		.pane-node-title {
+		.pane-node-title-field {
 			text-align: center;
 		}
 	}
@@ -71,7 +71,7 @@
 			width: calc(75% - 2em);
 		}
 
-		.pane-node-title {
+		.pane-node-title-field {
 			text-align: center;
 		}
 	}
@@ -111,7 +111,7 @@
 			width: calc(75% - 2em);
 		}
 
-		.pane-node-title {
+		.pane-node-title-field {
 			text-align: center;
 		}
 	}
