--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -155,6 +155,8 @@
         width: 100%;
         text-align: left;
         left: 0;
+    }
+    @include breakpoint(768px 959px) {
         font-size: 19px;
     }
 }
