--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -299,6 +299,9 @@ input, textarea, select, button {
 #content.page-content ul, #content.page-content ol {
   overflow: auto;
   font-size: 13px;
+  padding-left: 0;
+  list-style-position: inside;
+  margin-left: 1em;
 }
 @media screen and (min-width: 400px) {
   #content.page-content ul, #content.page-content ol {
@@ -309,6 +312,12 @@ input, textarea, select, button {
   #content.page-content ul, #content.page-content ol {
     font-size: 18px;
   }
+}
+#content.page-content ul li {
+  list-style-image: url("images/arrow-alt-circle-right-solid.svg");
+}
+#content.page-content ul li:hover {
+  list-style-image: url("images/arrow-alt-circle-right-duotone.svg");
 }
 
 /* @group Blocks, panels & all regions
