--- a/css/wwm-marina-omega.styles.css
+++ b/css/wwm-marina-omega.styles.css
@@ -315,6 +315,7 @@ input, textarea, select, button {
 }
 #content.page-content ul li {
   list-style-image: url("../images/arrow-alt-circle-right-solid.svg");
+  list-style-position: inside;
 }
 #content.page-content ul li:hover {
   list-style-image: url("../images/arrow-alt-circle-right-duotone.svg");
