--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -222,6 +222,7 @@ input, textarea, select, button {
 
   ul li {
     list-style-image: url('../images/arrow-alt-circle-right-solid.svg');
+    list-style-position: inside;
 
     &:hover {
       list-style-image: url('../images/arrow-alt-circle-right-duotone.svg');
